--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,6 @@ djoser==2.2.2
 djangorestframework_simplejwt==5.3.1
 drf-spectacular==0.27.1
 django-filter==24.1
+channels==4.0.0
+daphne==4.1.0
+mysqlclient==2.2.4
